fix: select overflow on chrome
Set a fixed width for the select element and set a weird fr value for
the second column that works perfectly on both chrome and firefox.
Meaning that the input fields and the preset-field have exactly the same
width.

--- a/www/main.css
+++ b/www/main.css
@@ -127,9 +127,13 @@ input[type="text"] {
 	min-width: fit-content;
 }
 
+#presets-field > select {
+	width: 8em;
+}
+
 .fieldset-grid {
 	display: grid;
-	grid-template-columns: auto 0.5fr;
+	grid-template-columns: auto 0.865fr;
 	gap: 0.5em;
 }
 
